Alpha 0.2 update
