# requests/event.go
@@ -1,0 +1,7 @@
+package requests
+
+type Event struct {
+	ID          uint   `json:"id"`
+	Description string `json:"nickname"`
+	Tages       []Tag  `json:"tages"`
+}
